gcc/testsuite/rust/rustc/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.rs
// Test that parentheses form doesn't work with struct types appearing in local variables.

struct Bar<A> {
    f: A
}

fn bar() {
    let x: Box<Bar()> = panic!();
// { dg-error ".E0107." "" { target *-*-* } .-1 }
// { dg-error ".E0107." "" { target *-*-* } .-2 }
}

fn main() { }

